--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <script src="kwitter.js"></script>
     </head>
     <body>
-        Enter Your Username:
-        <input type="text" id="riptonkslupinfred">
+        <h1>Enter Your Username:</h1>
+        <div>
+        <input type="text" id="riptonkslupinfred" placeholder="User Name">
+        </div>
+        <div>
         <button type="submit" onclick="madeyeseverusalbus()">Submit</button>
+        </div>
     </body>
 </html>
